--- a/FIPLY/App/app/src/main/res/layout/fragment_trainingssession.xml
+++ b/FIPLY/App/app/src/main/res/layout/fragment_trainingssession.xml
@@ -1,68 +1,86 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin">
 
+    <!-- FrameLayout in das die Fragments geladen werden -->
+    <FrameLayout
+        android:id="@+id/fraTsUebungsview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="2"/>
+    <FrameLayout
+        android:id="@+id/fraTsWatch"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="2"/>
+    <!--<FrameLayout-->
+        <!--android:id="@+id/fraTsMusic"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:layout_weight="1"/>-->
 
-    <EditText
-        android:id="@+id/tvTimer"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerVertical="true"
-        android:inputType="number"
-        android:textColor="@color/colorPrimaryDark"
-        android:textSize="150sp" />
+    <!--<EditText-->
+        <!--android:id="@+id/tvTimer"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_alignParentTop="true"-->
+        <!--android:layout_centerVertical="true"-->
+        <!--android:layout_below="@id/fraTrainingssession"-->
+        <!--android:inputType="number"-->
+        <!--android:textColor="@color/colorPrimaryDark"-->
+        <!--android:textSize="150sp" />-->
 
-    <Button
-        android:id="@+id/tsTimerBtStart"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/tvTimer"
-        android:background="@color/colorPrimary"
-        android:text="@string/tsTimerBtStart"
-        android:textSize="20sp" />
+    <!--<Button-->
+        <!--android:id="@+id/tsTimerBtStart"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_below="@+id/tvTimer"-->
+        <!--android:background="@color/colorPrimary"-->
+        <!--android:text="@string/tsTimerBtStart"-->
+        <!--android:textSize="20sp" />-->
 
-    <Button
-        android:id="@+id/tsTimerBtReset"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/tvTimer"
-        android:layout_toRightOf="@+id/tsTimerBtStart"
-        android:background="@color/colorPrimary"
-        android:text="@string/tsTimerBtReset"
-        android:textSize="20sp" />
+    <!--<Button-->
+        <!--android:id="@+id/tsTimerBtReset"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_below="@id/tvTimer"-->
+        <!--android:layout_toRightOf="@+id/tsTimerBtStart"-->
+        <!--android:background="@color/colorPrimary"-->
+        <!--android:text="@string/tsTimerBtReset"-->
+        <!--android:textSize="20sp" />-->
 
-    <!--
-    <EditText
-        android:id="@+id/tvStopwatch"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerVertical="true"
-        android:layout_alignParentEnd="true"
-        android:inputType="number"
-        android:textSize="150sp" />
+    <!--&lt;!&ndash;-->
+    <!--<EditText-->
+        <!--android:id="@+id/tvStopwatch"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_alignParentTop="true"-->
+        <!--android:layout_centerVertical="true"-->
+        <!--android:layout_alignParentEnd="true"-->
+        <!--android:inputType="number"-->
+        <!--android:textSize="150sp" />-->
 
-    <Button
-        android:id="@+id/tsStopwatchBtStart"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/tvStopwatch"
-        android:text="@string/tsStopwatchBtStart"
-        android:textSize="20sp" />
+    <!--<Button-->
+        <!--android:id="@+id/tsStopwatchBtStart"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_below="@+id/tvStopwatch"-->
+        <!--android:text="@string/tsStopwatchBtStart"-->
+        <!--android:textSize="20sp" />-->
 
-    <Button
-        android:id="@+id/tsStopwatchBtReset"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/tvStopwatch"
-        android:layout_toRightOf="@+id/tsStopwatchBtStart"
-        android:text="@string/tsStopwatchBtReset"
-        android:textSize="20sp" />
-    -->
-</RelativeLayout>
+    <!--<Button-->
+        <!--android:id="@+id/tsStopwatchBtReset"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_below="@id/tvStopwatch"-->
+        <!--android:layout_toRightOf="@+id/tsStopwatchBtStart"-->
+        <!--android:text="@string/tsStopwatchBtReset"-->
+        <!--android:textSize="20sp" />-->
+    <!--&ndash;&gt;-->
+</LinearLayout>
