--- a/FIPLY/App/app/src/main/res/layout/fragment_trainingsinstructions.xml
+++ b/FIPLY/App/app/src/main/res/layout/fragment_trainingsinstructions.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:paddingBottom="@dimen/activity_vertical_margin"
             android:paddingLeft="@dimen/activity_horizontal_margin"
             android:paddingRight="@dimen/activity_horizontal_margin"
@@ -10,10 +10,9 @@
     >
 
     <RelativeLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:orientation="vertical"
-        android:weightSum="1"
         >
 
         <TextView
@@ -22,10 +21,9 @@
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:layout_gravity="left"
             android:text="@string/detailName"
             android:textColor="@color/darkTextColorLight"
-            android:textSize="30dp"
+            android:textSize="25dp"
             />
 
         <TextView
@@ -34,9 +32,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_below="@id/detailUebungName"
-            android:layout_marginBottom="5dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="5dp"
+            android:layout_marginLeft="5dp"
             android:text="@string/detailMG"
             android:textColor="@color/darkTextColorLight"
             />
@@ -49,13 +45,24 @@
             android:layout_below="@id/detailUebungName"
             android:layout_marginBottom="5dp"
             android:layout_marginRight="5dp"
+            android:layout_marginLeft="15dp"
             android:layout_toRightOf="@id/staticDetailMuskelGruppe"
             android:text="Test Muskelgruppe"
             android:textColor="@color/darkTextColorLight"
             />
 
         <TextView
-            android:id="@+id/detailZielGruppe"
+            android:id="@+id/staticDetailSchwierigkeit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignStart="@id/staticDetailMuskelGruppe"
+            android:layout_below="@+id/detailMuskelGruppe"
+            android:text="@string/detailSchwierigkeit"
+            android:textColor="@color/darkTextColorLight"
+            />
+
+        <TextView
+            android:id="@+id/detailSchwierigkeit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignLeft="@id/detailMuskelGruppe"
@@ -63,30 +70,7 @@
             android:layout_below="@+id/detailMuskelGruppe"
             android:layout_marginBottom="5dp"
             android:layout_marginRight="5dp"
-            android:text="Test Zielgruppe"
-            android:textColor="@color/darkTextColorLight"
-            />
-
-        <TextView
-            android:id="@+id/staticDetailZielGruppe"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignStart="@id/staticDetailMuskelGruppe"
-            android:layout_below="@+id/staticDetailMuskelGruppe"
-            android:text="@string/detailEquip"
-            android:textColor="@color/darkTextColorLight"
-            />
-
-        <TextView
-            android:id="@+id/detailBeschreibung"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignLeft="@id/detailZielGruppe"
-            android:layout_alignParentEnd="true"
-            android:layout_below="@id/detailZielGruppe"
-            android:layout_marginBottom="5dp"
-            android:layout_marginRight="5dp"
-            android:text="Test Beschreibung"
+            android:text="Test Schwierigkeit"
             android:textColor="@color/darkTextColorLight"
             />
 
@@ -94,20 +78,22 @@
             android:id="@+id/staticDetailBeschreibung"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignStart="@id/staticDetailZielGruppe"
-            android:layout_below="@+id/detailZielGruppe"
+            android:layout_alignStart="@id/staticDetailSchwierigkeit"
+            android:layout_below="@+id/detailSchwierigkeit"
             android:text="@string/detailDesc"
             android:textColor="@color/darkTextColorLight"
             />
 
         <TextView
-            android:id="@+id/detailAnleitung"
+            android:id="@+id/detailBeschreibung"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignLeft="@id/detailBeschreibung"
-            android:layout_below="@id/detailBeschreibung"
+            android:layout_alignLeft="@id/detailSchwierigkeit"
+            android:layout_alignParentEnd="true"
+            android:layout_below="@id/detailSchwierigkeit"
+            android:layout_marginBottom="5dp"
             android:layout_marginRight="5dp"
-            android:text="Test Anleitung"
+            android:text="Test Beschreibung"
             android:textColor="@color/darkTextColorLight"
             />
 
@@ -121,11 +107,111 @@
             android:textColor="@color/darkTextColorLight"
             />
 
+        <TextView
+            android:id="@+id/detailAnleitung"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@id/detailBeschreibung"
+            android:layout_below="@id/detailBeschreibung"
+            android:layout_marginBottom="5dp"
+            android:layout_marginRight="5dp"
+            android:text="Test Anleitung"
+            android:textColor="@color/darkTextColorLight"
+            />
+
+        <TextView
+            android:id="@+id/staticDetailEquipment"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignStart="@id/staticDetailAnleitung"
+            android:layout_below="@+id/detailAnleitung"
+            android:text="@string/detailEquipment"
+            android:textColor="@color/darkTextColorLight"
+            />
+
+        <TextView
+            android:id="@+id/detailEquipment"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@id/detailAnleitung"
+            android:layout_below="@id/detailAnleitung"
+            android:layout_marginBottom="5dp"
+            android:layout_marginRight="5dp"
+            android:text="Test Equipment"
+            android:textColor="@color/darkTextColorLight"
+            />
+
+        <TextView
+            android:id="@+id/staticDetailGewicht"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignStart="@id/staticDetailEquipment"
+            android:layout_below="@+id/detailEquipment"
+            android:text="@string/detailGewicht"
+            android:textColor="@color/darkTextColorLight"
+            />
+
+        <TextView
+            android:id="@+id/detailGewicht"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@id/detailEquipment"
+            android:layout_below="@id/detailEquipment"
+            android:layout_marginBottom="5dp"
+            android:layout_marginRight="5dp"
+            android:text="Test Gewicht"
+            android:textColor="@color/darkTextColorLight"
+            />
+
+        <TextView
+            android:id="@+id/staticDetailSaetze"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignStart="@id/staticDetailGewicht"
+            android:layout_below="@+id/detailGewicht"
+            android:text="@string/detailSaetze"
+            android:textColor="@color/darkTextColorLight"
+            />
+
+        <TextView
+            android:id="@+id/detailSaetze"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@id/detailGewicht"
+            android:layout_below="@id/detailGewicht"
+            android:layout_marginBottom="5dp"
+            android:layout_marginRight="5dp"
+            android:text="Test Saetze"
+            android:textColor="@color/darkTextColorLight"
+            />
+
+        <TextView
+            android:id="@+id/staticDetailWiederholungen"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignStart="@id/staticDetailSaetze"
+            android:layout_below="@+id/detailSaetze"
+            android:text="@string/detailWiederholungen"
+            android:textColor="@color/darkTextColorLight"
+            />
+
+        <TextView
+            android:id="@+id/detailWiederholungen"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@id/detailSaetze"
+            android:layout_below="@id/detailSaetze"
+            android:layout_marginBottom="5dp"
+            android:layout_marginRight="5dp"
+            android:text="Test Wiederholungen"
+            android:textColor="@color/darkTextColorLight"
+            />
+
         <ImageButton
             android:id="@+id/ibLinkVideo"
             android:layout_width="60dp"
             android:layout_height="60dp"
-            android:layout_below="@id/detailAnleitung"
+            android:layout_below="@id/detailWiederholungen"
             android:adjustViewBounds="true"
             android:background="@color/darkSecondary"
             android:padding="3dp"
@@ -139,7 +225,7 @@
             android:layout_height="match_parent"
             android:layout_alignBottom="@id/ibLinkVideo"
             android:layout_alignTop="@id/ibLinkVideo"
-            android:layout_below="@id/detailAnleitung"
+            android:layout_below="@id/detailWiederholungen"
             android:layout_toRightOf="@id/ibLinkVideo"
             android:gravity="center_vertical"
             android:padding="3dp"
