--- a/FIPLY/App/app/src/main/res/layout/fragment_playlist.xml
+++ b/FIPLY/App/app/src/main/res/layout/fragment_playlist.xml
@@ -55,4 +55,12 @@
         android:layout_alignParentTop="true"
         android:choiceMode="multipleChoice" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:text="@string/NoSongsFound"
+        android:id="@+id/tvAbovePlaylistManagement"
+        />
+
 </RelativeLayout>
